ingress_example_multihostpath_complex.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: s1   # ServerPool1
          servicePort: 80
        path: /foo          # HTTPContentRouting1
      - backend: 
          serviceName: s2   # ServerPool2
          servicePort: 80
        path: /foo2         # HTTPContentRouting2
  - host: bar.baz.com
    http:
      paths:
      - backend:
          serviceName: s3   # ServerPool3
          servicePort: 80
        path: /foo          # HTTPContentRouting3
      - backend:
          serviceName: s2   # ServerPool4
          servicePort: 80
        path: /foo2         # HTTPContentRouting4
